# rs_opengl

./: Cargo.toml
resources/objects/guitar/: source_attribution.txt:Zone.Identifier
resources/textures/: teapot.obj:Zone.Identifier
src/: camera.rs  common.rs  macros.rs  main.rs  mesh.rs  model.rs  shader.rs
src/_1_getting_started/: _2_3_hello_triangle_exercise1.rs  _2_4_hello_triangle_exercise2.rs  _2_5_hello_triangle_exercise3.rs  _3_1_shaders_uniform.rs  _3_2_shaders_interpolation.rs  _3_3_shaders_class.rs  _3_4_shaders_exercise1.rs  _3_5_shaders_exercise2.rs  _3_6_shaders_exercise3.rs  _4_1_textures.rs  _4_2_textures_combined.rs  _4_3_textures_combined_ex1.rs  _4_4_textures_combined_ex2.rs  _4_5_textures_combined_ex3.rs  _4_6_textures_combined_ex4.rs  _5_1_transforms.rs  _5_2_transforms_ex1.rs  _5_3_transforms_ex2.rs  _6_1_coordinates.rs  _6_2_coordinates_cube.rs  _6_3_coordinates_multiple_cubes.rs  _7_1_camera.rs  _7_2_camera_keyboard.rs  _7_3_camera_mouse.rs  _7_4_camera_class.rs  mod.rs
src/_2_lighting/: _1_colors.rs  _2_1_basic_lighting_diffuse.rs  _2_2_basic_lighting_diffuse_ex1.rs  _2_3_basic_lighting_diffuse_ex2.rs  _2_4_basic_lighting_diffuse_ex3.rs  _3_1_materials.rs  _3_2_materials_ex1.rs  _4_1_lighting_maps_diffuse.rs  _4_2_lighting_maps_specular.rs  _4_3_lighting_maps_emission_ex1.rs  _5_1_light_casters_directional.rs  _5_2_light_casters_point.rs  _5_3_light_casters_spot.rs  _5_4_light_casters_spot_smooth.rs  _6_1_multiple_lights.rs  mod.rs
src/_3_model_loading/: _1_model_loading.rs  _1_model_loading_42.rs  _2_model_loading_42.rs  mod.rs
(+21 files in other folders)
