[package]
name = "rs_opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
glfw = "0.23.0"
image = "0.19.0"
# only needed from chapter 3 on
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"

[dev-dependencies]
imagine = "0.0.5"

[features]
default = [
    "chapter-1",
    "chapter-2",
    "chapter-3",
    "chapter-4",
    "chapter-5",
    "chapter-6",
    "chapter-7"
]
chapter-1 = []
chapter-2 = []
chapter-3 = []
chapter-4 = []
chapter-5 = []
chapter-6 = []
chapter-7 = []
